--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ html {
   display: -ms-flexbox;
   display: flex;
   align-items: center;
+  justify-content: center;
   background: -webkit-gradient(linear, left top, right top, from(#5A18C9), to(#905BEC));
   background: -o-linear-gradient(left, #5A18C9, #905BEC);
   background: linear-gradient(to right, #5A18C9, #905BEC);
@@ -55,7 +56,6 @@ html {
 }
 
 .nav__menu li {
-  padding: 0 15px;
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -76,6 +76,7 @@ html {
 }
 
 .nav__menu a {
+  padding: 25px 15px;
   text-decoration: none;
   color: #fff;
 }
